# resume-agent

./: .dockerignore  .gitignore  CLAUDE.md  INTERNAL.md  README.md  pyproject.toml  quickstart.md
.github/workflows/: deploy.yml
apps/backend/: .env.example  __init__.py  langgraph_server.py
apps/backend/api/: auth.py  database.py  sessions.py
apps/backend/config/: __init__.py  app_config.py  langgraph_config.py
apps/backend/infrastructure/: __init__.py
apps/backend/infrastructure/langgraph_server/: __init__.py  buffer.py  config.py  executor.py  router.py  schemas.py  types.py
apps/backend/llm/: __init__.py  client.py  config.py
apps/backend/tests/: conftest.py  test_resume_enhancer.py
apps/backend/workflows/: __init__.py
apps/backend/workflows/core/: __init__.py  base_state.py
apps/backend/workflows/graphs/: __init__.py
apps/frontend/: .env.example  .env.production  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/frontend/api/: auth.ts  config.ts  sessions.ts
apps/frontend/api/langgraph/: client.ts  index.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/auth/: login-form.tsx
apps/frontend/components/chat/: chat-input.tsx  chat-panel.tsx  index.ts  message-item.tsx  message-list.tsx
apps/frontend/components/layout/: sidebar.tsx
apps/frontend/components/providers/: google-auth-provider.tsx
apps/frontend/components/resume/: index.ts  (+3 more)
apps/frontend/hooks/: index.ts  useAuth.ts  useChat.ts  useSessions.ts
apps/frontend/lib/: message-parser.ts  string-match.ts
apps/frontend/types/: index.ts
deploy/: Dockerfile  Dockerfile.frontend  deploy.sh  docker-compose.yml  init-db.sql  nginx.conf
docs/: answer.md  state.md
(+25 files in other folders)
